# debea

./: .bakefile_gen.state  Makefile.cvs  Makefile.in  README.md  aclocal.m4  autoconf_inc.m4  config.bkl  config.sub  configure  configure.in  dba-config.in  dba.bkgen  dba.bkl  dba.dsw  dba_dbacsv.dsp  dba_libdba.dsp  dba_odbc.dsp  examples_config.bkl  makefile.gcc  makefile.vc
autom4te.cache/: output.0  requests  traces.0  traces.1
bakefile/: dba.bkl
dba/: archive.cpp  archive.h  archiveexception.h  bindedvar.cpp  bindedvar.h  bool_filter.cpp  bool_filter.h  chandle.h  collectionfilter.h  config.h.in  connectstring.cpp  connectstring.h  connectstringparser.cpp  connectstringparser.h  conversion.cpp  conversion.h  convspec.cpp  convspec.h  csv.cpp  csv.h  database.cpp  database.h  datetime_filter.cpp  datetime_filter.h  dba.h  dbplugin.cpp  dbplugin.h  dbupdate.cpp  dbupdate.h  dbupdatescriptparser.cpp  dbupdatescriptparser.h  defs.cpp  defs.h  double_filter.cpp  double_filter.h  exception.cpp  exception.h  fileutils.cpp  fileutils.h  filtermapper.cpp  (+73 more)
docs/: dba.doxyfile
docs/src/: doxygen_footer.html  doxygen_header.html  examples.dox  toc.dox  tutorial.dox  web_header.html
examples/: Makefile.in  autoconf_inc.m4  examples.bkl  examples.dsw  makefile.gcc  makefile.vc
examples/bind/: Makefile.in  autoconf_inc.m4  bind.bkl  bind.cpp  bind.dsp  bind.dsw  makefile.gcc  makefile.vc
examples/bindstb/: Makefile.in  autoconf_inc.m4  bindstb.bkl  bindstb.cpp  bindstb.dsp  bindstb.dsw  makefile.gcc  makefile.vc
examples/csv_auto/: Makefile.in  autoconf_inc.m4  csv_auto.bkl  csv_auto.cpp  csv_auto.dsp  csv_auto.dsw  makefile.gcc  makefile.vc
examples/csv_manual/: Makefile.in  autoconf_inc.m4  csv_manual.bkl  csv_manual.cpp  csv_manual.dsp  csv_manual.dsw  makefile.gcc  makefile.vc
examples/filter/: Makefile.in  autoconf_inc.m4  filter.bkl  filter.cpp  filter.dsp  filter.dsw  makefile.gcc  makefile.vc
examples/idlock/: Makefile.in  autoconf_inc.m4  idlock.bkl  idlock.cpp  idlock.dsp  idlock.dsw  makefile.gcc  makefile.vc
examples/inheritance/: Makefile.in  autoconf_inc.m4  inheritance.bkl  inheritance.cpp  inheritance.dsp  inheritance.dsw  makefile.gcc  makefile.vc
examples/queries/: Makefile.in  autoconf_inc.m4  makefile.gcc  makefile.vc  queries.bkl  queries.cpp  queries.dsp  queries.dsw
examples/quickstart/: Makefile.in  autoconf_inc.m4  makefile.gcc  makefile.vc  quickstart.bkl  quickstart.cpp  quickstart.dsp  quickstart.dsw
examples/sublists/: Makefile.in  autoconf_inc.m4  makefile.gcc  makefile.vc  sublists.bkl  sublists.cpp  sublists.dsp  sublists.dsw
examples/transaction/: Makefile.in  autoconf_inc.m4  makefile.gcc  makefile.vc  transaction.bkl  transaction.cpp  transaction.dsp  transaction.dsw
examples/xmlsimple/: Makefile.in  autoconf_inc.m4  makefile.gcc  makefile.vc  xmlsimple.bkl  xmlsimple.cpp  xmlsimple.dsp  xmlsimple.dsw
scripts/: makedist.sh  publish.sh
test/: archive_lists.cpp  archive_lists.h  archive_storeable.cpp  archive_storeable.h  connectstringtestcase.cpp  connectstringtestcase.h  csvtestcase.cpp  csvtestcase.h  databaseconnection.cpp  databaseconnection.h  db_basic.cpp  db_basic.h  db_testbase.cpp  db_testbase.h  dbplugin_bugs.cpp  dbplugin_bugs.h  dbplugin_test.cpp  dbplugin_test.h  dbplugintestsuite.cpp  dbplugintestsuite.h  filterstestcase.cpp  filterstestcase.h  main.cpp  open_for_write_test.xml  sharedsqlarchive_tests.cpp  sharedsqlarchive_tests.h  sql_queries.h  sqlarchive_basic.cpp  sqlarchive_basic.h  sqlarchive_lists.cpp  sqlarchive_lists.h  sqlparamparsertestcase.cpp  sqlparamparsertestcase.h  stdfilters_test.cpp  stdfilters_test.h  testobject.cpp  testobject.h  utils.cpp  utils.h  xmltestcase.cpp  (+1 more)
